--- a/style.css
+++ b/style.css
@@ -8,20 +8,22 @@
 
 :root {
   font-size: 62.5%;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
   font-size: 1.6rem;
 }
 
-input, select, button {
-  font-family: 'Roboto', sans-serif;
+input,
+select,
+button {
+  font-family: "Roboto", sans-serif;
 }
 
 header {
   min-height: 53.2rem;
-  background-color: #F8F8FF;
+  background-color: #f8f8ff;
   text-align: center;
   position: relative;
   overflow: hidden;
@@ -31,7 +33,7 @@ header {
 
 header::before {
   content: "";
-  background-image: url('./assets/ilustra-01.svg');
+  background-image: url("./assets/ilustra-01.svg");
   width: 40.7rem;
   height: 34.5rem;
   position: absolute;
@@ -42,7 +44,7 @@ header::before {
 
 header::after {
   content: "";
-  background-image: url('./assets/ilustra-02.svg');
+  background-image: url("./assets/ilustra-02.svg");
   width: 41.4rem;
   height: 33rem;
   position: absolute;
@@ -52,7 +54,6 @@ header::after {
 }
 
 header .content {
-  border: 1px solid red;
   width: fit-content;
   position: relative;
 }
@@ -62,5 +63,29 @@ header p {
   line-height: 160%;
   letter-spacing: 0.1rem;
   text-transform: uppercase;
-  color: #E45858;
+  color: #e45858;
+}
+
+header h1 {
+  max-width: 64.7rem;
+  font-size: 4.8rem;
+  line-height: 125%;
+  color: #121214;
+}
+
+header h1 span {
+  color: #6246ea;
+}
+
+form {
+  display: flex;
+  margin-top: 4rem;
+  padding: 4rem;
+  gap: 2.4rem;
+  background-color: #fff;
+  border: 1px solid #eaeaea;
+  border-radius: 1rem;
+}
+
+.search-field {
 }
