--- a/style.css
+++ b/style.css
@@ -11,6 +11,17 @@
   font-family: "Roboto", sans-serif;
 }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
+
 body {
   font-size: 1.6rem;
 }
@@ -19,12 +30,12 @@ input,
 select,
 button {
   font-family: "Roboto", sans-serif;
+  all: unset;
 }
 
 header {
   min-height: 53.2rem;
   background-color: #f8f8ff;
-  text-align: center;
   position: relative;
   overflow: hidden;
   display: grid;
@@ -56,6 +67,11 @@ header::after {
 header .content {
   width: fit-content;
   position: relative;
+  z-index: 1;
+}
+
+header .content .top {
+  text-align: center;
 }
 
 header p {
@@ -71,6 +87,7 @@ header h1 {
   font-size: 4.8rem;
   line-height: 125%;
   color: #121214;
+  margin: 1.8rem auto 0;
 }
 
 header h1 span {
@@ -88,4 +105,59 @@ form {
 }
 
 .search-field {
+  display: flex;
+  align-items: center;
+  gap: 1.2rem;
+  background-color: #F4F4FF;
+  border-radius: 0.5rem;
+  padding: 1.2rem 0.8rem 1.2rem 1.4rem;
+}
+
+input,
+select {
+  color: #7C7C8A;
+  min-width: 29rem;
+}
+
+.search-field i {
+  color: #E45858;
+  font-size: 2.4rem;
+}
+
+select,
+.select {
+  position: relative;
+}
+
+select {
+  z-index: 1;
+}
+
+.select i.ph-caret-down {
+  position: absolute;
+  right: 1rem;
+  z-index: 0;
+  color: #858793;
+}
+
+form button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1.2rem 3.2rem;
+  gap: 0.8rem;
+  font-weight: 700;
+  font-size: 1.4rem;
+  line-height: 2.4rem;
+  text-transform: uppercase;
+  background: #6246EA;
+  border-radius: 0.5rem;
+  color: #FFF;
+  cursor: pointer;
+  box-shadow: 1px 1px 2px 1px #00000022;
+  transition: filter 200ms;
+}
+
+form button:hover {
+  filter: brightness(0.9);
 }
