--- a/style.css
+++ b/style.css
@@ -21,6 +21,39 @@
   white-space: nowrap;
   border-width: 0;
 }
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+  font-size: 1.4rem;
+  line-height: 2.4rem;
+  text-transform: uppercase;
+  cursor: pointer;
+  padding: 0.4rem 2.4rem;
+  border-radius: 0.5rem;
+  transition: 200ms;
+}
+
+.primary {
+  background: #6246EA;
+  color: #FFF;
+  transition: background 200ms;
+}
+
+.primary:hover {
+  background: #523DBE;
+  color: #FFF;
+}
+
+.secondary {
+  color: #6246EA;
+}
+
+.secondary:hover {
+  background: #6246EA;
+  color: #FFF;
+}
 
 body {
   font-size: 1.6rem;
@@ -141,23 +174,24 @@ select {
 }
 
 form button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   padding: 1.2rem 3.2rem;
-  gap: 0.8rem;
-  font-weight: 700;
-  font-size: 1.4rem;
-  line-height: 2.4rem;
-  text-transform: uppercase;
-  background: #6246EA;
-  border-radius: 0.5rem;
-  color: #FFF;
-  cursor: pointer;
-  box-shadow: 1px 1px 2px 1px #00000022;
-  transition: filter 200ms;
 }
 
-form button:hover {
-  filter: brightness(0.9);
+main .content {
+  max-width: 1216px;
+  margin: 10rem auto;
+}
+
+section.top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+section.top .view {
+  display: flex;
+  padding: 8px;
+  border: 1px solid #EAEAEA;
+  border-radius: 6px;
+  gap: 0.2rem;
 }
