--- a/style.css
+++ b/style.css
@@ -173,11 +173,11 @@ select {
   color: #858793;
 }
 
-form button {
+form button.btn {
   padding: 1.2rem 3.2rem;
 }
 
-main .content {
+main > .content {
   max-width: 1216px;
   margin: 10rem auto;
 }
@@ -194,4 +194,84 @@ section.top .view {
   border: 1px solid #EAEAEA;
   border-radius: 6px;
   gap: 0.2rem;
+}
+
+section.cards {
+  margin-top: 4rem;
+
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 3rem;
+}
+
+.card {
+  max-width: 38.4rem;
+  border: 1px solid #EAEAEA;
+  border-radius: 1rem;
+  box-shadow: 1px 1px 1px 1px #00000020;
+  overflow: hidden;
+}
+
+.card .content {
+  display: grid;
+  gap: 1.6rem;
+  padding: 1.6rem;
+}
+
+.card h3 {
+  color: #121214;
+  font-size: 2rem;
+  line-height: 140%;
+}
+
+.card p {
+  opacity: 0.75;
+}
+
+.card .location {
+  display: flex;
+  align-items: center;
+  gap: 1.25rem;
+  opacity: 0.75;
+}
+
+.location i {
+  color: #E45858;
+  font-size: 2.4rem;
+  opacity: 1;
+}
+
+@media(max-width: 1216px) {
+  form {
+    flex-direction: column;
+    margin-inline: 2rem;
+  }
+
+  section.top {
+    margin: 0 2rem;
+  }
+
+  section.cards {
+    width: 80rem;
+    margin: 4rem auto 0;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media(max-width: 820px) {
+  section.cards {
+    width: 38rem;
+    margin: 4rem auto 0;
+    grid-template-columns: 1fr;
+  }
+}
+
+@media(max-width: 620px) {
+  .top {
+    max-width: 48rem;
+  }
+
+  .top h1 {
+    font-size: 3rem;
+  }
 }
